# Zalman-linux

./: .gitignore  99-zalman-lcd.rules  LICENSE  PROTOCOL.md  README.md  pyproject.toml
systemd/: zalman-display.service
zalman_lcd/: __init__.py  cli.py  config.py  daemon.py  dbg.py  device.py  render.py  sensors.py  sources.py
